examples/test/testpolicy4496.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4496
  namespace: namespace377
spec:
  podSelector:
    matchLabels:
      key38: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value41
          key36: value30
          key38: value12
      podSelector:
        matchLabels:
          key11: value14
